ajout de tt la securité back + debut de la logique back pour les themes et articles lié au front

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 # Connexion a la base de donnees MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/bdd_mdd?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/bdd_mdd?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1@MySql@1
 
 # affichage des requetes sql dans la console
 spring.jpa.show-sql=true
+
+# info pour le JWT
+jwt.expirationMs=604800000 
+jwt.secret=maSuperCleUltraSecretePourSignerMonJwtEnHS512_VraimentTresTresLongue_123456789!abcdef 
 
